# test_torch

./: CMakeLists.txt  main.cpp
